config/envoy/lua-8080.yaml
static_resources:
    clusters:
        - name: backend1
          connect_timeout: 3s
          type: STATIC
          lb_policy: ROUND_ROBIN
          load_assignment:
              cluster_name: service
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: 127.0.0.1
                                      port_value: 8000
    listeners:
        - name: listener0
          address:
              socket_address:
                  address: 0.0.0.0
                  port_value: 8080

          filter_chains:
              - filters:
                    - name: envoy.filters.network.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                          http_filters:
                              - name: envoy.filters.http.lua
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
                                    default_source_code:
                                        inline_string: |
                                            uuid = (loadfile "config/envoy/uuid.lua")() -- one-time load of the routines
                                            function envoy_on_request(request_handle)
                                              local correlationid = request_handle:headers():get("correlationid")
                                              if correlationid == nil then
                                                request_handle:headers():replace("correlationid","GEN-"..uuid())
                                              end
                                            end
                              - name: envoy.filters.http.router
                                typed_config:
                                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          codec_type: auto
                          stat_prefix: ingress_http
                          route_config:
                              virtual_hosts:
                                  - name: service
                                    domains:
                                        - "*"
                                    routes:
                                        - match:
                                              prefix: "/"
                                              headers:
                                                  - name: "backend"
                                                    string_match:
                                                        exact: "server1"
                                          route:
                                              cluster: backend1
